syntax = "proto3";

package user;

option go_package = "./user";

message UserRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
}

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse);
}
